force-app/main/default/objects/SAI_Application_Feature__c/SAI_Application_Feature__c.object-meta.xml
<CustomObject>
    <label>SAI Application Feature</label>
    <nameField>
        <displayFormat>AF-{00000000}</displayFormat>
        <label>SAI Application Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Application Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>