force-app/main/default/objects/SAI_Application_Feature__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <label>Feature Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>