force-app/main/default/objects/SAI_Application_Feature__c/fields/Value_Alphanumeric__c.field-meta.xml
<CustomField>
    <fullName>Value_Alphanumeric__c</fullName>
    <label>Value Alphanumeric</label>
    <type>TextArea</type>
</CustomField>