force-app/main/default/objects/SAI_Application_Feature__c/fields/Value_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Value_Numeric__c</fullName>
    <label>Value Numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>